Fixed display issued on mobile
Added back links to the homepage

--- a/src/Components/Homepage/Homepage.css
+++ b/src/Components/Homepage/Homepage.css
@@ -1,13 +1,5 @@
 .hero {
-    margin: 0 auto;
-    text-align: center;
-    padding-top: 50px;
-    /* background-image: url(../Resources/background.JPEG);; */
-    height: 25vh;
-    background-size: cover;
-    /* width: 100%; */
-    background-repeat: no-repeat;
-    margin:0px auto;
+    padding: 10px
 }
 
 /* .img {
